# sonic-ztp

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  azure-pipelines.yml  configure.ac  package.cfg  test.py
.github/: copilot-instructions.md
.github/workflows/: codeql.yml  semgrep.yml
debian/: changelog  control  install  rules  sonic-sdi-sys-dev.install  sonic-ztp.dirs  ztp.service
doc/: Doxyfile
inc/: sdi_bus.h  sdi_i2c.h  sdi_register_fantray_api.h
sonic/: sdi_bus_api.h  sdi_i2c_bus_api.h  sdi_register_common_api.h  sdi_register_eeprom_api.h  util.h
sonic/private/: sdi_entity_internal.h
sonic/unittest/: sdi_unit_test.h
src/: Makefile  sdi_entity.c  sdi_entity_framework.c  sdi_entity_info.c  sdi_entity_reset.c  sdi_fan.c  sdi_led.c  sdi_media.c  sdi_startup.c  sdi_thermal.c
src/etc/default/: ztp
src/etc/dhcp/dhclient-enter-hooks.d/: inband-ztp-ip  inband-ztp-ip6
src/etc/dhcp/dhclient-exit-hooks.d/: ztp  ztp-rsyslog
src/etc/logrotate.d/: ztp
src/unittest/: sdi_reference.cpp  sdi_target.cpp  sdi_unit_test.cpp
src/unittest_utils/: pysdi.py  sdi_shell.py
src/usr/lib/ztp/: sonic-ztp  ztp-engine.py  ztp-profile.sh
src/usr/lib/ztp/dhcp/: inband-ztp-ip  inband-ztp-ip6  ztp  ztp-rsyslog
src/usr/lib/ztp/plugins/: configdb-json  connectivity-check  (+5 more)
tests/: conftest.py  test_ConfigSection.py  test_DecodeSysEeprom.py  test_Downloader.py  test_Downloader_input_validation.py  test_DynamicURL.py  test_Identifier.py  test_JsonReader.py  test_Logger.py  test_URL.py  test_ZTPCfg.py  test_ZTPJson.py  test_ZTPLib.py  test_configdb-json.py  test_connectivity-check.py  test_firmware.py  test_snmp.py  test_sonic_ztp_warm_boot.py  test_ztp_engine.py  testlib.py
utils/: Makefile
(+11 files in other folders)
